Batch update of generated files

--- a/home.html
+++ b/home.html
@@ -148,6 +148,37 @@
     // Replace this with your actual news data.
     const newsData = [
   {
+    "title": "Ribery: 'Messi, Ronaldo không giỏi hơn tôi vào năm 2013'",
+    "content": "Franck Ribery cho rằng việc anh chỉ xếp thứ ba trong cuộc bình chọn Quả Bóng Vàng 2013 là không công bằng, mặc dù anh đã có một năm thi đấu xuất sắc với Bayern Munich. Ribery nhấn mạnh rằng cả Lionel Messi và Cristiano Ronaldo không giỏi hơn anh vào năm đó, khi mà anh góp công lớn giúp Bayern giành cú ăn năm. Anh cũng cảm thấy khó hiểu về việc FIFA gia hạn thời gian bỏ phiếu, điều này khiến cho kết quả cuối cùng có phần gây tranh cãi.",
+    "link": "https://vnexpress.net/ribery-messi-ronaldo-khong-gioi-hon-toi-vao-nam-2013-4864626.html",
+    "cat": "the-thao",
+    "positivity": 6,
+    "importance": 7,
+    "question": "Ribery đã nói gì về cuộc bầu chọn Quả Bóng Vàng 2013?",
+    "answers": [
+      {
+        "text": "Ribery cho rằng Messi và Ronaldo không giỏi hơn anh vào năm 2013.",
+        "correct": true
+      },
+      {
+        "text": "Ribery cảm thấy hài lòng với vị trí thứ ba của mình.",
+        "correct": false
+      },
+      {
+        "text": "Ribery không quan tâm đến kết quả bầu chọn.",
+        "correct": false
+      },
+      {
+        "text": "Ribery nghĩ rằng anh xứng đáng giành Quả Bóng Vàng.",
+        "correct": false
+      },
+      {
+        "text": "Ribery cho rằng năm 2013 không phải là năm tốt của anh.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Thiếu nữ mang Việt phục, biểu diễn trên đường phố TPHCM",
     "content": "Tối 22/3, hàng nghìn bạn trẻ tại TPHCM đã tham gia ngày hội \"Tóc xanh vạt áo\" lần thứ 5, trong trang phục Việt phục. Sự kiện nằm trong chương trình Lễ hội Thanh Niên 2025, tạo ra không khí sôi động với các màn nhảy flashmob và biểu diễn văn hóa truyền thống. Ngày hội không chỉ là dịp để các bạn trẻ khoe sắc trang phục truyền thống mà còn là nơi giao lưu văn hóa, kết nối bạn bè và khơi dậy niềm tự hào về di sản văn hóa Việt Nam.",
     "link": "https://dantri.com.vn/giai-tri/thieu-nu-mang-viet-phuc-bieu-dien-tren-duong-pho-tphcm-20250322222334138.htm",
@@ -2502,6 +2533,33 @@
     ]
   },
   {
+    "title": "Cộng đồng mạng phát sốt với bài toán chỉ toàn phép cộng mà gây \"xoắn não\"",
+    "content": "Bài toán đang gây sốt trên mạng xã hội yêu cầu người chơi phải nhận diện quy luật từ một chuỗi số có vẻ như là phép cộng nhưng thực tế lại ẩn chứa nhiều bất ngờ. Đề bài đưa ra bốn phép cộng, trong đó ba kết quả đã cho là sai theo quy tắc toán học truyền thống. Để giải được bài toán, người tham gia cần phát hiện quy luật rằng các kết quả là số đảo ngược của tổng hai số ở phía bên trái dấu '='. Kết quả cuối cùng của phép cộng thứ tư là 13.",
+    "link": "https://dantri.com.vn/giao-duc/cong-dong-mang-phat-sot-voi-bai-toan-chi-toan-phep-cong-ma-gay-xoan-nao-20250320113006716.htm",
+    "cat": "giao-duc",
+    "positivity": 8,
+    "importance": 5,
+    "question": "Bài toán gây sốt trên mạng xã hội yêu cầu người chơi tìm quy luật gì?",
+    "answers": [
+      {
+        "text": "Các số đảo ngược kết quả phép cộng",
+        "correct": true
+      },
+      {
+        "text": "Kết quả là tổng các số bên trái",
+        "correct": false
+      },
+      {
+        "text": "Kết quả là số lớn nhất trong dãy",
+        "correct": false
+      },
+      {
+        "text": "Chỉ cần cộng các số lại với nhau",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Đặt stent sau bao lâu thì ổn định?",
     "content": "Sau khi đặt stent mạch vành, bệnh nhân thường cần nằm viện từ 2-3 ngày để theo dõi sức khỏe. Thời gian hồi phục có thể khoảng một tuần đối với trường hợp không khẩn cấp, nhưng nếu cần đặt stent ngay lập tức do nhồi máu cơ tim, có thể mất vài tuần đến hơn một tháng để bình phục hoàn toàn. Bệnh nhân cần tuân thủ chế độ dinh dưỡng và tránh hoạt động nặng để hồi phục nhanh chóng.",
     "link": "https://vnexpress.net/dat-stent-sau-bao-lau-thi-on-dinh-4864401.html",
@@ -2528,33 +2586,6 @@
       },
       {
         "text": "3 tháng",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Cộng đồng mạng phát sốt với bài toán chỉ toàn phép cộng mà gây \"xoắn não\"",
-    "content": "Bài toán đang gây sốt trên mạng xã hội yêu cầu người chơi phải nhận diện quy luật từ một chuỗi số có vẻ như là phép cộng nhưng thực tế lại ẩn chứa nhiều bất ngờ. Đề bài đưa ra bốn phép cộng, trong đó ba kết quả đã cho là sai theo quy tắc toán học truyền thống. Để giải được bài toán, người tham gia cần phát hiện quy luật rằng các kết quả là số đảo ngược của tổng hai số ở phía bên trái dấu '='. Kết quả cuối cùng của phép cộng thứ tư là 13.",
-    "link": "https://dantri.com.vn/giao-duc/cong-dong-mang-phat-sot-voi-bai-toan-chi-toan-phep-cong-ma-gay-xoan-nao-20250320113006716.htm",
-    "cat": "giao-duc",
-    "positivity": 8,
-    "importance": 5,
-    "question": "Bài toán gây sốt trên mạng xã hội yêu cầu người chơi tìm quy luật gì?",
-    "answers": [
-      {
-        "text": "Các số đảo ngược kết quả phép cộng",
-        "correct": true
-      },
-      {
-        "text": "Kết quả là tổng các số bên trái",
-        "correct": false
-      },
-      {
-        "text": "Kết quả là số lớn nhất trong dãy",
-        "correct": false
-      },
-      {
-        "text": "Chỉ cần cộng các số lại với nhau",
         "correct": false
       }
     ]
