Batch update of generated files

--- a/home_shortnews.html
+++ b/home_shortnews.html
@@ -81,6 +81,64 @@
     // Example JSON array with news objects
     const newsData = [
   {
+    "title": "Ai dễ bị nhồi máu cơ tim?",
+    "content": "Nhồi máu cơ tim là tình trạng nghiêm trọng xảy ra khi dòng máu đến tim bị cắt đột ngột, thường do tắc nghẽn động mạch vành. Những người có nguy cơ cao bao gồm người lớn tuổi, có tiền sử gia đình về bệnh tim, người hút thuốc, người bị cao huyết áp, cholesterol cao, tiểu đường, thừa cân, ít vận động, và căng thẳng kéo dài. Nam giới thường có nguy cơ cao hơn nữ giới ở độ tuổi trẻ, nhưng nữ giới có thể gặp nguy cơ tương đương sau mãn kinh.",
+    "link": "https://vnexpress.net/ai-de-bi-nhoi-mau-co-tim-4862853.html",
+    "cat": "suc-khoe",
+    "positivity": 5,
+    "importance": 8,
+    "question": "Ai là những người dễ bị nhồi máu cơ tim?",
+    "answers": [
+      {
+        "text": "Người lớn tuổi và có tiền sử gia đình về bệnh tim",
+        "correct": true
+      },
+      {
+        "text": "Người trẻ tuổi và khỏe mạnh",
+        "correct": false
+      },
+      {
+        "text": "Người thường xuyên tập thể dục",
+        "correct": false
+      },
+      {
+        "text": "Người ăn uống không khoa học",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Vĩnh biệt chồng chết não, người vợ 'xin cho em hiến tạng của anh'",
+    "content": "Bài viết kể về câu chuyện cảm động của một người vợ, sau khi chồng cô chết não do tai nạn, đã quyết định hiến tạng của anh để cứu sống nhiều người khác. Mặc dù ban đầu gia đình không đồng ý, nhưng sau khi thuyết phục, họ đã đạt được sự đồng thuận để hiến tạng. Anh đã hiến tặng hai quả thận, trái tim, gan và giác mạc cho bảy người bệnh, mang lại hi vọng và sự sống cho họ. Sự ra đi của anh để lại nỗi buồn lớn cho gia đình, đặc biệt là hai đứa con nhỏ và mẹ anh đang bệnh tật.",
+    "link": "https://vnexpress.net/vinh-biet-chong-chet-nao-nguoi-vo-xin-cho-em-hien-tang-cua-anh-4864625.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Người vợ đã quyết định làm gì sau khi chồng mất do chết não?",
+    "answers": [
+      {
+        "text": "Hiến tạng của chồng để cứu sống người khác",
+        "correct": true
+      },
+      {
+        "text": "Chôn cất chồng ở quê",
+        "correct": false
+      },
+      {
+        "text": "Đưa chồng về nhà cho gia đình chăm sóc",
+        "correct": false
+      },
+      {
+        "text": "Gọi điện cho bạn bè thông báo tình hình",
+        "correct": false
+      },
+      {
+        "text": "Tìm kiếm sự hỗ trợ tài chính cho gia đình",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Ribery: 'Messi, Ronaldo không giỏi hơn tôi vào năm 2013'",
     "content": "Franck Ribery cho rằng việc anh chỉ xếp thứ ba trong cuộc bình chọn Quả Bóng Vàng 2013 là không công bằng, mặc dù anh đã có một năm thi đấu xuất sắc với Bayern Munich. Ribery nhấn mạnh rằng cả Lionel Messi và Cristiano Ronaldo không giỏi hơn anh vào năm đó, khi mà anh góp công lớn giúp Bayern giành cú ăn năm. Anh cũng cảm thấy khó hiểu về việc FIFA gia hạn thời gian bỏ phiếu, điều này khiến cho kết quả cuối cùng có phần gây tranh cãi.",
     "link": "https://vnexpress.net/ribery-messi-ronaldo-khong-gioi-hon-toi-vao-nam-2013-4864626.html",
@@ -1500,33 +1558,6 @@
     ]
   },
   {
-    "title": "Bị suy thận có thể chơi pickleball không?",
-    "content": "Người bị suy thận mạn giai đoạn hai như bạn cần thận trọng khi tham gia các hoạt động thể thao như pickleball. Mặc dù môn này có nhiều lợi ích cho sức khỏe, nhưng cũng đi kèm với nguy cơ chấn thương cao. Trước khi tiếp tục chơi, bạn nên tham khảo ý kiến bác sĩ để đảm bảo an toàn cho sức khỏe của mình.",
-    "link": "https://vnexpress.net/bi-suy-than-co-the-choi-pickleball-khong-4864511.html",
-    "cat": "suc-khoe",
-    "positivity": 6,
-    "importance": 7,
-    "question": "Người bị suy thận có thể tiếp tục chơi pickleball không?",
-    "answers": [
-      {
-        "text": "Nên tham khảo ý kiến bác sĩ trước khi chơi.",
-        "correct": true
-      },
-      {
-        "text": "Có thể chơi mà không cần lo lắng gì.",
-        "correct": false
-      },
-      {
-        "text": "Chơi bình thường như trước đây.",
-        "correct": false
-      },
-      {
-        "text": "Không nên chơi bất kỳ môn thể thao nào.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Cặp đôi đồng tính muốn có con nên làm gì?",
     "content": "Cặp đôi đồng tính có thể có con thông qua các phương pháp hỗ trợ sinh sản hiện đại như thụ tinh nhân tạo (IUI) và thụ tinh trong ống nghiệm (IVF). Những cặp đồng tính nữ có thể xin tinh trùng từ ngân hàng và thực hiện IUI, trong khi cặp đồng tính nam có thể phải chờ đợi các quy định pháp luật cho phép mang thai hộ. Bài viết cũng nhấn mạnh tầm quan trọng của việc tư vấn tâm lý cho bệnh nhân trong quá trình điều trị IVF.",
     "link": "https://vnexpress.net/cap-doi-dong-tinh-muon-co-con-nen-lam-gi-4864488.html",
@@ -1553,6 +1584,33 @@
       },
       {
         "text": "Chờ đợi pháp luật cho phép mang thai hộ",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Bị suy thận có thể chơi pickleball không?",
+    "content": "Người bị suy thận mạn giai đoạn hai như bạn cần thận trọng khi tham gia các hoạt động thể thao như pickleball. Mặc dù môn này có nhiều lợi ích cho sức khỏe, nhưng cũng đi kèm với nguy cơ chấn thương cao. Trước khi tiếp tục chơi, bạn nên tham khảo ý kiến bác sĩ để đảm bảo an toàn cho sức khỏe của mình.",
+    "link": "https://vnexpress.net/bi-suy-than-co-the-choi-pickleball-khong-4864511.html",
+    "cat": "suc-khoe",
+    "positivity": 6,
+    "importance": 7,
+    "question": "Người bị suy thận có thể tiếp tục chơi pickleball không?",
+    "answers": [
+      {
+        "text": "Nên tham khảo ý kiến bác sĩ trước khi chơi.",
+        "correct": true
+      },
+      {
+        "text": "Có thể chơi mà không cần lo lắng gì.",
+        "correct": false
+      },
+      {
+        "text": "Chơi bình thường như trước đây.",
+        "correct": false
+      },
+      {
+        "text": "Không nên chơi bất kỳ môn thể thao nào.",
         "correct": false
       }
     ]
