Batch update of generated files

--- a/home_shortnews.html
+++ b/home_shortnews.html
@@ -81,6 +81,33 @@
     // Example JSON array with news objects
     const newsData = [
   {
+    "title": "Bí quyết sống thọ của cụ bà 104 tuổi",
+    "content": "Cụ bà María Segunda Pérez, 104 tuổi, sống tại Argentina, chia sẻ bí quyết sống thọ của mình, bao gồm lối sống tích cực, chế độ ăn uống lành mạnh và duy trì vận động thường xuyên. Cụ khuyên mọi người nên tránh những chủ đề gây tranh cãi và tập trung vào việc cải thiện bản thân. Nghiên cứu đã chỉ ra rằng lối sống và tâm trạng tích cực có thể có tác động lớn đến tuổi thọ.",
+    "link": "https://vnexpress.net/bi-quyet-song-tho-cua-cu-ba-104-tuoi-4864463.html",
+    "cat": "suc-khoe",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Bí quyết sống thọ của cụ bà 104 tuổi là gì?",
+    "answers": [
+      {
+        "text": "Suy nghĩ tích cực và ăn uống lành mạnh",
+        "correct": true
+      },
+      {
+        "text": "Gen di truyền tốt",
+        "correct": false
+      },
+      {
+        "text": "Tránh tập thể dục",
+        "correct": false
+      },
+      {
+        "text": "Sống một mình và không giao tiếp",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Audi sắp ra mắt xe điện mới",
     "content": "Audi sẽ ra mắt mẫu xe điện đầu tiên thuộc thương hiệu mới AUDI tại triển lãm ôtô Thượng Hải vào ngày 25/4 tới, nhắm đến thị trường khách hàng trẻ tại Trung Quốc. Mẫu xe này, phát triển từ bản concept AUDI E, sẽ sử dụng kiến trúc điện 800V và có công suất lên tới 754 mã lực. Đây là một phần trong chiến lược của Audi nhằm đáp ứng nhu cầu xe điện đang tăng cao ở Trung Quốc, với kế hoạch sản xuất bắt đầu vào cuối năm 2025.",
     "link": "https://vnexpress.net/audi-sap-ra-mat-xe-dien-moi-4864485.html",
@@ -777,28 +804,32 @@
     ]
   },
   {
-    "title": "Nặn mụn có nguy cơ mắc uốn ván không?",
-    "content": "Nặn mụn có thể dẫn đến nguy cơ mắc uốn ván nếu không thực hiện đúng cách, bởi vì việc tạo ra vết thương hở có thể cho phép vi khuẩn xâm nhập. Đặc biệt, nếu dụng cụ không được tiệt trùng hoặc tay không sạch sẽ, nguy cơ nhiễm trùng tăng lên. Để phòng ngừa, người nặn mụn nên tiêm vaccine phòng uốn ván và thăm khám bác sĩ để được điều trị đúng cách.",
-    "link": "https://vnexpress.net/nan-mun-co-nguy-co-mac-uon-van-khong-4864591.html",
+    "title": "Ho ra máu cảnh báo bệnh gì?",
+    "content": "Ho ra máu có thể là dấu hiệu của nhiều bệnh lý nghiêm trọng như ung thư phổi, lao phổi, và bệnh phổi tắc nghẽn mạn tính. Các nguyên nhân khác bao gồm viêm phế quản, tổn thương đường hô hấp, và các tình trạng viêm tự miễn. Nếu ho ra máu kéo dài hoặc kèm theo triệu chứng nghiêm trọng như đau ngực hay sút cân, người bệnh nên đi khám ngay. Để phòng ngừa, cần điều trị sớm các bệnh viêm nhiễm đường hô hấp và bỏ thuốc lá.",
+    "link": "https://vnexpress.net/ho-ra-mau-canh-bao-benh-gi-4860525.html",
     "cat": "suc-khoe",
-    "positivity": 7,
+    "positivity": 4,
     "importance": 8,
-    "question": "Nặn mụn có thể gây ra nguy cơ mắc uốn ván không?",
+    "question": "Ho ra máu có thể cảnh báo bệnh gì nguy hiểm?",
     "answers": [
       {
-        "text": "Có, nếu không thực hiện đúng cách.",
+        "text": "Ung thư phổi",
         "correct": true
       },
       {
-        "text": "Không, luôn an toàn.",
+        "text": "Cảm cúm",
         "correct": false
       },
       {
-        "text": "Chỉ nếu mụn lớn.",
+        "text": "Viêm họng",
         "correct": false
       },
       {
-        "text": "Chỉ nếu có vết thương sâu.",
+        "text": "Cao huyết áp",
+        "correct": false
+      },
+      {
+        "text": "Đau dạ dày",
         "correct": false
       }
     ]
@@ -866,32 +897,28 @@
     ]
   },
   {
-    "title": "Ho ra máu cảnh báo bệnh gì?",
-    "content": "Ho ra máu có thể là dấu hiệu của nhiều bệnh lý nghiêm trọng như ung thư phổi, lao phổi, và bệnh phổi tắc nghẽn mạn tính. Các nguyên nhân khác bao gồm viêm phế quản, tổn thương đường hô hấp, và các tình trạng viêm tự miễn. Nếu ho ra máu kéo dài hoặc kèm theo triệu chứng nghiêm trọng như đau ngực hay sút cân, người bệnh nên đi khám ngay. Để phòng ngừa, cần điều trị sớm các bệnh viêm nhiễm đường hô hấp và bỏ thuốc lá.",
-    "link": "https://vnexpress.net/ho-ra-mau-canh-bao-benh-gi-4860525.html",
+    "title": "Nặn mụn có nguy cơ mắc uốn ván không?",
+    "content": "Nặn mụn có thể dẫn đến nguy cơ mắc uốn ván nếu không thực hiện đúng cách, bởi vì việc tạo ra vết thương hở có thể cho phép vi khuẩn xâm nhập. Đặc biệt, nếu dụng cụ không được tiệt trùng hoặc tay không sạch sẽ, nguy cơ nhiễm trùng tăng lên. Để phòng ngừa, người nặn mụn nên tiêm vaccine phòng uốn ván và thăm khám bác sĩ để được điều trị đúng cách.",
+    "link": "https://vnexpress.net/nan-mun-co-nguy-co-mac-uon-van-khong-4864591.html",
     "cat": "suc-khoe",
-    "positivity": 4,
+    "positivity": 7,
     "importance": 8,
-    "question": "Ho ra máu có thể cảnh báo bệnh gì nguy hiểm?",
+    "question": "Nặn mụn có thể gây ra nguy cơ mắc uốn ván không?",
     "answers": [
       {
-        "text": "Ung thư phổi",
+        "text": "Có, nếu không thực hiện đúng cách.",
         "correct": true
       },
       {
-        "text": "Cảm cúm",
+        "text": "Không, luôn an toàn.",
         "correct": false
       },
       {
-        "text": "Viêm họng",
+        "text": "Chỉ nếu mụn lớn.",
         "correct": false
       },
       {
-        "text": "Cao huyết áp",
-        "correct": false
-      },
-      {
-        "text": "Đau dạ dày",
+        "text": "Chỉ nếu có vết thương sâu.",
         "correct": false
       }
     ]
@@ -2555,6 +2582,33 @@
     ]
   },
   {
+    "title": "Cộng đồng mạng phát sốt với bài toán chỉ toàn phép cộng mà gây \"xoắn não\"",
+    "content": "Bài toán đang gây sốt trên mạng xã hội yêu cầu người chơi phải nhận diện quy luật từ một chuỗi số có vẻ như là phép cộng nhưng thực tế lại ẩn chứa nhiều bất ngờ. Đề bài đưa ra bốn phép cộng, trong đó ba kết quả đã cho là sai theo quy tắc toán học truyền thống. Để giải được bài toán, người tham gia cần phát hiện quy luật rằng các kết quả là số đảo ngược của tổng hai số ở phía bên trái dấu '='. Kết quả cuối cùng của phép cộng thứ tư là 13.",
+    "link": "https://dantri.com.vn/giao-duc/cong-dong-mang-phat-sot-voi-bai-toan-chi-toan-phep-cong-ma-gay-xoan-nao-20250320113006716.htm",
+    "cat": "giao-duc",
+    "positivity": 8,
+    "importance": 5,
+    "question": "Bài toán gây sốt trên mạng xã hội yêu cầu người chơi tìm quy luật gì?",
+    "answers": [
+      {
+        "text": "Các số đảo ngược kết quả phép cộng",
+        "correct": true
+      },
+      {
+        "text": "Kết quả là tổng các số bên trái",
+        "correct": false
+      },
+      {
+        "text": "Kết quả là số lớn nhất trong dãy",
+        "correct": false
+      },
+      {
+        "text": "Chỉ cần cộng các số lại với nhau",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Đặt stent sau bao lâu thì ổn định?",
     "content": "Sau khi đặt stent mạch vành, bệnh nhân thường cần nằm viện từ 2-3 ngày để theo dõi sức khỏe. Thời gian hồi phục có thể khoảng một tuần đối với trường hợp không khẩn cấp, nhưng nếu cần đặt stent ngay lập tức do nhồi máu cơ tim, có thể mất vài tuần đến hơn một tháng để bình phục hoàn toàn. Bệnh nhân cần tuân thủ chế độ dinh dưỡng và tránh hoạt động nặng để hồi phục nhanh chóng.",
     "link": "https://vnexpress.net/dat-stent-sau-bao-lau-thi-on-dinh-4864401.html",
@@ -2581,33 +2635,6 @@
       },
       {
         "text": "3 tháng",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Cộng đồng mạng phát sốt với bài toán chỉ toàn phép cộng mà gây \"xoắn não\"",
-    "content": "Bài toán đang gây sốt trên mạng xã hội yêu cầu người chơi phải nhận diện quy luật từ một chuỗi số có vẻ như là phép cộng nhưng thực tế lại ẩn chứa nhiều bất ngờ. Đề bài đưa ra bốn phép cộng, trong đó ba kết quả đã cho là sai theo quy tắc toán học truyền thống. Để giải được bài toán, người tham gia cần phát hiện quy luật rằng các kết quả là số đảo ngược của tổng hai số ở phía bên trái dấu '='. Kết quả cuối cùng của phép cộng thứ tư là 13.",
-    "link": "https://dantri.com.vn/giao-duc/cong-dong-mang-phat-sot-voi-bai-toan-chi-toan-phep-cong-ma-gay-xoan-nao-20250320113006716.htm",
-    "cat": "giao-duc",
-    "positivity": 8,
-    "importance": 5,
-    "question": "Bài toán gây sốt trên mạng xã hội yêu cầu người chơi tìm quy luật gì?",
-    "answers": [
-      {
-        "text": "Các số đảo ngược kết quả phép cộng",
-        "correct": true
-      },
-      {
-        "text": "Kết quả là tổng các số bên trái",
-        "correct": false
-      },
-      {
-        "text": "Kết quả là số lớn nhất trong dãy",
-        "correct": false
-      },
-      {
-        "text": "Chỉ cần cộng các số lại với nhau",
         "correct": false
       }
     ]
@@ -3641,33 +3668,6 @@
     ]
   },
   {
-    "title": "Đóng bảo hiểm 30 năm, nghỉ hưu trước tuổi được hưởng chế độ ra sao?",
-    "content": "Bài viết giải đáp thắc mắc của một viên chức đã đóng bảo hiểm 30 năm và muốn nghỉ hưu trước tuổi theo nghị định 178/2024/NĐ-CP. Theo luật sư Nguyễn Hồng Linh, người này đủ điều kiện để nghỉ hưu trước tuổi và sẽ được hưởng đầy đủ lương hưu mà không bị trừ tỉ lệ do nghỉ hưu sớm. Ngoài ra, họ còn được hưởng các khoản trợ cấp khác theo quy định của pháp luật về bảo hiểm xã hội.",
-    "link": "https://tuoitre.vn/dong-bao-hiem-30-nam-nghi-huu-truoc-tuoi-duoc-huong-che-do-ra-sao-20250313135630462.htm",
-    "cat": "phap-luat",
-    "positivity": 8,
-    "importance": 9,
-    "question": "Người đóng bảo hiểm 30 năm nghỉ hưu trước tuổi có được hưởng chế độ gì không?",
-    "answers": [
-      {
-        "text": "Có, họ sẽ được hưởng đầy đủ lương hưu và các khoản trợ cấp khác.",
-        "correct": true
-      },
-      {
-        "text": "Không, họ sẽ không được hưởng lương hưu.",
-        "correct": false
-      },
-      {
-        "text": "Họ chỉ được hưởng một phần lương hưu.",
-        "correct": false
-      },
-      {
-        "text": "Họ phải chờ đến tuổi nghỉ hưu mới được hưởng lương hưu.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Lúa chết vì khô hạn, nông dân phải cắt cho bò ăn",
     "content": "Khô hạn kéo dài tại Gia Lai đã khiến gần 50 ha lúa của người dân bị thiệt hại nặng nề, buộc họ phải cắt lúa để làm thức ăn cho bò. Ông Tônh và nhiều nông dân khác đang phải tìm cách cứu mùa màng bằng việc bơm nước từ giếng, nhưng nước ngày càng cạn kiệt. Tình trạng này không chỉ xảy ra ở Gia Lai mà còn lan rộng sang các tỉnh khác như Kon Tum, nơi khoảng 380 ha lúa và cây trồng khác cũng bị ảnh hưởng nghiêm trọng do thiếu nước tưới.",
     "link": "https://vnexpress.net/lua-chet-vi-kho-han-nong-dan-phai-cat-cho-bo-an-4858759.html",
@@ -3690,6 +3690,33 @@
       },
       {
         "text": "Vì không có giống lúa tốt",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Đóng bảo hiểm 30 năm, nghỉ hưu trước tuổi được hưởng chế độ ra sao?",
+    "content": "Bài viết giải đáp thắc mắc của một viên chức đã đóng bảo hiểm 30 năm và muốn nghỉ hưu trước tuổi theo nghị định 178/2024/NĐ-CP. Theo luật sư Nguyễn Hồng Linh, người này đủ điều kiện để nghỉ hưu trước tuổi và sẽ được hưởng đầy đủ lương hưu mà không bị trừ tỉ lệ do nghỉ hưu sớm. Ngoài ra, họ còn được hưởng các khoản trợ cấp khác theo quy định của pháp luật về bảo hiểm xã hội.",
+    "link": "https://tuoitre.vn/dong-bao-hiem-30-nam-nghi-huu-truoc-tuoi-duoc-huong-che-do-ra-sao-20250313135630462.htm",
+    "cat": "phap-luat",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Người đóng bảo hiểm 30 năm nghỉ hưu trước tuổi có được hưởng chế độ gì không?",
+    "answers": [
+      {
+        "text": "Có, họ sẽ được hưởng đầy đủ lương hưu và các khoản trợ cấp khác.",
+        "correct": true
+      },
+      {
+        "text": "Không, họ sẽ không được hưởng lương hưu.",
+        "correct": false
+      },
+      {
+        "text": "Họ chỉ được hưởng một phần lương hưu.",
+        "correct": false
+      },
+      {
+        "text": "Họ phải chờ đến tuổi nghỉ hưu mới được hưởng lương hưu.",
         "correct": false
       }
     ]
