Batch update of generated files

--- a/home_shortnews.html
+++ b/home_shortnews.html
@@ -81,6 +81,37 @@
     // Example JSON array with news objects
     const newsData = [
   {
+    "title": "Bang Mỹ nhiều trụ sạc xe điện hơn trụ xăng",
+    "content": "Bang California đã đạt cột mốc 178.549 trụ sạc xe điện, vượt 48% so với số trụ bơm xăng với khoảng 120.000 trụ. Thống đốc Gavin Newsom cho biết bang đang đầu tư mạnh vào cơ sở hạ tầng xe sạch và đã phê duyệt kế hoạch đầu tư 1,4 tỷ USD để mở rộng hệ thống sạc xe điện. Trong năm 2024, gần 38.000 bộ sạc mới đã được lắp đặt, cho thấy sự chuyển mình mạnh mẽ của bang này trong việc phát triển xe điện và giảm thiểu khí thải.",
+    "link": "https://vnexpress.net/bang-my-nhieu-tru-sac-xe-dien-hon-tru-xang-4864529.html",
+    "cat": "oto-xe-may",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Bang California hiện có bao nhiêu trụ sạc xe điện?",
+    "answers": [
+      {
+        "text": "178.549 trụ sạc xe điện",
+        "correct": true
+      },
+      {
+        "text": "120.000 trụ bơm xăng",
+        "correct": false
+      },
+      {
+        "text": "700.000 trụ sạc gia đình",
+        "correct": false
+      },
+      {
+        "text": "35.554 bộ sạc cũ",
+        "correct": false
+      },
+      {
+        "text": "1,4 tỷ USD đầu tư",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Bí quyết sống thọ của cụ bà 104 tuổi",
     "content": "Cụ bà María Segunda Pérez, 104 tuổi, sống tại Argentina, chia sẻ bí quyết sống thọ của mình, bao gồm lối sống tích cực, chế độ ăn uống lành mạnh và duy trì vận động thường xuyên. Cụ khuyên mọi người nên tránh những chủ đề gây tranh cãi và tập trung vào việc cải thiện bản thân. Nghiên cứu đã chỉ ra rằng lối sống và tâm trạng tích cực có thể có tác động lớn đến tuổi thọ.",
     "link": "https://vnexpress.net/bi-quyet-song-tho-cua-cu-ba-104-tuoi-4864463.html",
