Batch update of generated files

--- a/home.html
+++ b/home.html
@@ -148,6 +148,64 @@
     // Replace this with your actual news data.
     const newsData = [
   {
+    "title": "Tin tức sáng 23-3: Công ty liên quan ông Bùi Thành Nhơn đăng ký bán 5 triệu cổ phiếu Novaland",
+    "content": "Công ty cổ phần NovaGroup, liên quan đến ông Bùi Thành Nhơn, đã đăng ký bán 5 triệu cổ phiếu NVL của Novaland, dự kiến thực hiện giao dịch từ ngày 27-3 đến 4-4. Sau giao dịch, tỷ lệ sở hữu của NovaGroup tại Novaland sẽ giảm xuống còn 17,37%. Giá cổ phiếu NVL hiện đang giao dịch khoảng 10.750 đồng, dự kiến thu về hơn 50 tỷ đồng từ đợt bán này.",
+    "link": "https://tuoitre.vn/tin-tuc-sang-23-3-cong-ty-lien-quan-ong-bui-thanh-nhon-dang-ky-ban-5-trieu-co-phieu-novaland-20250322225412077.htm",
+    "cat": "kinh-doanh",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Công ty nào liên quan đến ông Bùi Thành Nhơn vừa đăng ký bán cổ phiếu?",
+    "answers": [
+      {
+        "text": "NovaGroup",
+        "correct": true
+      },
+      {
+        "text": "Vingroup",
+        "correct": false
+      },
+      {
+        "text": "Techcombank",
+        "correct": false
+      },
+      {
+        "text": "Masan",
+        "correct": false
+      },
+      {
+        "text": "FPT",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Chứng hoang tưởng",
+    "content": "Chứng hoang tưởng là tình trạng tâm lý liên quan đến cảm giác nghi ngờ và sợ hãi về người khác mà không có căn cứ thực tế. Triệu chứng có thể bao gồm sự nghi ngờ dữ dội, cảm giác bị đe dọa, và khó khăn trong việc thư giãn. Chứng hoang tưởng thường liên quan đến các rối loạn tâm thần khác và có thể được điều trị bằng liệu pháp tâm lý và thuốc. Nếu không được kiểm soát, tình trạng này có thể dẫn đến những biến chứng nghiêm trọng và hành vi gây nguy hiểm.",
+    "link": "https://vnexpress.net/chung-hoang-tuong-4863575.html",
+    "cat": "suc-khoe",
+    "positivity": 4,
+    "importance": 8,
+    "question": "Chứng hoang tưởng là gì?",
+    "answers": [
+      {
+        "text": "Chứng hoang tưởng là tình trạng nghi ngờ và sợ hãi không có căn cứ về người khác.",
+        "correct": true
+      },
+      {
+        "text": "Chứng hoang tưởng là một loại bệnh truyền nhiễm.",
+        "correct": false
+      },
+      {
+        "text": "Chứng hoang tưởng là một trạng thái tạm thời không cần điều trị.",
+        "correct": false
+      },
+      {
+        "text": "Chứng hoang tưởng là một triệu chứng của bệnh cảm cúm.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Bỏ việc lương cao, sang Việt Nam 'tìm ý nghĩa cuộc đời'",
     "content": "Choi Won Jun, một người Hàn Quốc, đã từ bỏ công việc lương cao ở Seoul để tìm kiếm ý nghĩa cuộc sống tại TP HCM, Việt Nam. Sau khi trải qua cuộc sống áp lực và nhàm chán, anh quyết định học nấu ăn và mở quán thịt nướng. Jun cảm nhận được sự ấm áp, tình người và tinh thần thoải mái của người Việt Nam, điều mà anh không tìm thấy ở Hàn Quốc. Giờ đây, anh làm việc chăm chỉ nhưng cảm thấy hạnh phúc và thỏa mãn hơn nhiều với cuộc sống mới của mình.",
     "link": "https://vnexpress.net/bo-viec-luong-cao-sang-viet-nam-tim-y-nghia-cuoc-doi-4864410.html",
