Batch update of generated files

--- a/home_shortnews.html
+++ b/home_shortnews.html
@@ -112,6 +112,37 @@
     ]
   },
   {
+    "title": "Bí quyết trở thành thủ khoa toàn trường của \"bà mẹ U40\"",
+    "content": "Nguyễn Song Châu, một bà mẹ U40, đã xuất sắc trở thành thủ khoa toàn trường tại Trường Đại học Gia Định với điểm trung bình 3.7/4.0. Dù phải vừa học, vừa làm và chăm sóc con nhỏ, chị vẫn kiên trì theo đuổi ước mơ học tập bằng cách sắp xếp thời gian hợp lý. Châu đã tham gia nhiều hoạt động ngoại khóa và hiện đang làm việc tại các trung tâm Anh ngữ, với mong muốn trở thành giáo viên tiếng Anh trong tương lai.",
+    "link": "https://dantri.com.vn/giao-duc/bi-quyet-tro-thanh-thu-khoa-toan-truong-cua-ba-me-u40-20250322205358478.htm",
+    "cat": "giao-duc",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Nguyễn Song Châu đã đạt được thành tựu gì trong học tập?",
+    "answers": [
+      {
+        "text": "Stt thủ khoa toàn trường",
+        "correct": true
+      },
+      {
+        "text": "Tốt nghiệp loại khá",
+        "correct": false
+      },
+      {
+        "text": "Tốt nghiệp loại trung bình",
+        "correct": false
+      },
+      {
+        "text": "Trở thành giảng viên",
+        "correct": false
+      },
+      {
+        "text": "Tham gia nhiều hoạt động ngoại khóa",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Chứng hoang tưởng",
     "content": "Chứng hoang tưởng là tình trạng tâm lý liên quan đến cảm giác nghi ngờ và sợ hãi về người khác mà không có căn cứ thực tế. Triệu chứng có thể bao gồm sự nghi ngờ dữ dội, cảm giác bị đe dọa, và khó khăn trong việc thư giãn. Chứng hoang tưởng thường liên quan đến các rối loạn tâm thần khác và có thể được điều trị bằng liệu pháp tâm lý và thuốc. Nếu không được kiểm soát, tình trạng này có thể dẫn đến những biến chứng nghiêm trọng và hành vi gây nguy hiểm.",
     "link": "https://vnexpress.net/chung-hoang-tuong-4863575.html",
@@ -920,37 +951,6 @@
     ]
   },
   {
-    "title": "Hủy mỡ để giảm 'bụng bia'",
-    "content": "Bài viết trình bày trường hợp của anh Bình và anh Cường, hai người đàn ông gặp vấn đề về vòng bụng lớn, thường được gọi là 'bụng bia'. Anh Bình đã chọn phương pháp đông hủy mỡ để giảm mỡ bụng, với kết quả giảm 6 cm vòng bụng trong hai tháng. Trong khi đó, anh Cường đã cải thiện tình trạng sức khỏe của mình bằng cách kết hợp điều trị nội tiết, dinh dưỡng và vận động, giúp giảm 12 kg và vòng bụng xuống còn 88 cm. Bác sĩ khuyến cáo nam giới cần chú ý đến vòng bụng lớn để phòng ngừa các vấn đề sức khỏe liên quan đến mỡ nội tạng.",
-    "link": "https://vnexpress.net/huy-mo-de-giam-bung-bia-4864565.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Làm thế nào để giảm 'bụng bia'?",
-    "answers": [
-      {
-        "text": "Sử dụng phương pháp đông hủy mỡ kết hợp chế độ dinh dưỡng và tập luyện",
-        "correct": true
-      },
-      {
-        "text": "Chỉ cần ăn kiêng mà không cần tập thể dục",
-        "correct": false
-      },
-      {
-        "text": "Uống thuốc giảm cân mà không cần thay đổi lối sống",
-        "correct": false
-      },
-      {
-        "text": "Không làm gì mà vẫn giảm cân",
-        "correct": false
-      },
-      {
-        "text": "Chỉ cần tập thể dục mà không cần thay đổi chế độ ăn uống",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Bị liệt dây thần kinh số 7 nên ăn gì?",
     "content": "Bị liệt dây thần kinh số 7, người bệnh cần bổ sung thực phẩm giàu dinh dưỡng để hỗ trợ phục hồi. Các loại thực phẩm như thịt nạc, cá béo, ngũ cốc nguyên hạt và các loại đậu giàu omega-3 rất có lợi cho sức khỏe. Ngoài ra, các loại trái cây và rau xanh cung cấp chất chống oxy hóa, vitamin và khoáng chất thiết yếu, giúp tăng cường hệ miễn dịch và chức năng thần kinh. Uống đủ nước và duy trì chế độ ăn uống lành mạnh cũng rất quan trọng.",
     "link": "https://vnexpress.net/bi-liet-day-than-kinh-so-7-nen-an-gi-4864560.html",
@@ -977,6 +977,37 @@
       },
       {
         "text": "Không cần ăn gì đặc biệt",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Hủy mỡ để giảm 'bụng bia'",
+    "content": "Bài viết trình bày trường hợp của anh Bình và anh Cường, hai người đàn ông gặp vấn đề về vòng bụng lớn, thường được gọi là 'bụng bia'. Anh Bình đã chọn phương pháp đông hủy mỡ để giảm mỡ bụng, với kết quả giảm 6 cm vòng bụng trong hai tháng. Trong khi đó, anh Cường đã cải thiện tình trạng sức khỏe của mình bằng cách kết hợp điều trị nội tiết, dinh dưỡng và vận động, giúp giảm 12 kg và vòng bụng xuống còn 88 cm. Bác sĩ khuyến cáo nam giới cần chú ý đến vòng bụng lớn để phòng ngừa các vấn đề sức khỏe liên quan đến mỡ nội tạng.",
+    "link": "https://vnexpress.net/huy-mo-de-giam-bung-bia-4864565.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Làm thế nào để giảm 'bụng bia'?",
+    "answers": [
+      {
+        "text": "Sử dụng phương pháp đông hủy mỡ kết hợp chế độ dinh dưỡng và tập luyện",
+        "correct": true
+      },
+      {
+        "text": "Chỉ cần ăn kiêng mà không cần tập thể dục",
+        "correct": false
+      },
+      {
+        "text": "Uống thuốc giảm cân mà không cần thay đổi lối sống",
+        "correct": false
+      },
+      {
+        "text": "Không làm gì mà vẫn giảm cân",
+        "correct": false
+      },
+      {
+        "text": "Chỉ cần tập thể dục mà không cần thay đổi chế độ ăn uống",
         "correct": false
       }
     ]
@@ -3601,37 +3632,6 @@
       },
       {
         "text": "Họ chỉ tổ chức lễ hội cho người Ấn Độ mà thôi.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Ông Trump nói đang đàm phán phân chia lãnh thổ Nga, Ukraine",
-    "content": "Ông Donald Trump, Tổng thống Mỹ, đã thông báo rằng các cuộc đàm phán về việc phân chia lãnh thổ giữa Nga và Ukraine đang diễn ra nhằm chấm dứt xung đột. Ông cho biết sẽ có lệnh ngừng bắn hoàn toàn sau khi đạt được thỏa thuận. Trump nhấn mạnh rằng cả hai bên cần nhượng bộ để có thể đạt được hòa bình, và những cuộc thảo luận với Tổng thống Putin và Zelensky đã diễn ra tích cực.",
-    "link": "https://dantri.com.vn/the-gioi/ong-trump-noi-dang-dam-phan-phan-chia-lanh-tho-nga-ukraine-20250322060807609.htm",
-    "cat": "the-gioi",
-    "positivity": 7,
-    "importance": 9,
-    "question": "Ông Trump đang đàm phán vấn đề gì giữa Nga và Ukraine?",
-    "answers": [
-      {
-        "text": "Phân chia lãnh thổ",
-        "correct": true
-      },
-      {
-        "text": "Tăng cường quân sự",
-        "correct": false
-      },
-      {
-        "text": "Giảm thuế xuất khẩu",
-        "correct": false
-      },
-      {
-        "text": "Thành lập liên minh quân sự",
-        "correct": false
-      },
-      {
-        "text": "Tạo ra khu vực tự trị cho Crimea",
         "correct": false
       }
     ]
