--- a/home_shortnews.html
+++ b/home_shortnews.html
@@ -81,6 +81,33 @@
     // Example JSON array with news objects
     const newsData = [
   {
+    "title": "Nga ra tối hậu thư cho Ukraine sau thỏa thuận ngừng tấn công hạ tầng",
+    "content": "Moscow đã đưa ra tối hậu thư cho Ukraine, cảnh báo rằng họ sẽ có hành động trả đũa nếu Ukraine tiếp tục tấn công cơ sở hạ tầng năng lượng của Nga, vi phạm thỏa thuận ngừng bắn. Người phát ngôn Bộ Ngoại giao Nga, Maria Zakharova, chỉ trích Ukraine vì đã không tuân thủ các thỏa thuận và tiếp tục thực hiện các cuộc tấn công. Trong khi đó, các cuộc tấn công qua lại giữa hai bên vẫn diễn ra, làm gia tăng căng thẳng trong khu vực.",
+    "link": "https://dantri.com.vn/the-gioi/nga-ra-toi-hau-thu-cho-ukraine-sau-thoa-thuan-ngung-tan-cong-ha-tang-20250323060226191.htm",
+    "cat": "the-gioi",
+    "positivity": 3,
+    "importance": 8,
+    "question": "Nga đã đưa ra tối hậu thư gì cho Ukraine trong bối cảnh chiến sự hiện tại?",
+    "answers": [
+      {
+        "text": "Nếu Ukraine tiếp tục tấn công cơ sở hạ tầng năng lượng của Nga, Moscow sẽ trả đũa.",
+        "correct": true
+      },
+      {
+        "text": "Nga sẽ ngừng mọi hoạt động quân sự đối với Ukraine.",
+        "correct": false
+      },
+      {
+        "text": "Ukraine sẽ được hỗ trợ bởi các đồng minh phương Tây.",
+        "correct": false
+      },
+      {
+        "text": "Moscow sẽ làm giảm căng thẳng trong cuộc xung đột.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Tin tức sáng 23-3: Công ty liên quan ông Bùi Thành Nhơn đăng ký bán 5 triệu cổ phiếu Novaland",
     "content": "Công ty cổ phần NovaGroup, liên quan đến ông Bùi Thành Nhơn, đã đăng ký bán 5 triệu cổ phiếu NVL của Novaland, dự kiến thực hiện giao dịch từ ngày 27-3 đến 4-4. Sau giao dịch, tỷ lệ sở hữu của NovaGroup tại Novaland sẽ giảm xuống còn 17,37%. Giá cổ phiếu NVL hiện đang giao dịch khoảng 10.750 đồng, dự kiến thu về hơn 50 tỷ đồng từ đợt bán này.",
     "link": "https://tuoitre.vn/tin-tuc-sang-23-3-cong-ty-lien-quan-ong-bui-thanh-nhon-dang-ky-ban-5-trieu-co-phieu-novaland-20250322225412077.htm",
@@ -107,33 +134,6 @@
       },
       {
         "text": "FPT",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "IU: \"Em gái quốc dân\" giàu có xứ Hàn, từng trải qua tuổi thơ khó khăn",
-    "content": "IU, tên thật là Lee Ji Eun, là một trong những ca sĩ và diễn viên nổi tiếng của Hàn Quốc, được biết đến với giọng hát ngọt ngào và nhiều ca khúc thành công. Mặc dù hiện tại sở hữu tài sản gần 50 triệu USD, IU đã trải qua một tuổi thơ khó khăn với nhiều thử thách, bao gồm việc bị bắt nạt và gia đình lâm vào cảnh khốn khó. Cô đã kiên trì theo đuổi ước mơ ca hát và hiện đang gây chú ý với bộ phim \"When life gives you tangerines\". IU không chỉ thành công trong sự nghiệp mà còn tích cực tham gia các hoạt động từ thiện.",
-    "link": "https://dantri.com.vn/giai-tri/iu-em-gai-quoc-dan-giau-co-xu-han-tung-trai-qua-tuoi-tho-kho-khan-20250318195448529.htm",
-    "cat": "giai-tri",
-    "positivity": 9,
-    "importance": 8,
-    "question": "IU đã trải qua những khó khăn gì trong tuổi thơ của mình?",
-    "answers": [
-      {
-        "text": "Cô từng bị bắt nạt và gia đình lâm vào cảnh khó khăn.",
-        "correct": true
-      },
-      {
-        "text": "Cô sống trong một gia đình giàu có mà không gặp khó khăn gì.",
-        "correct": false
-      },
-      {
-        "text": "Cô không có ước mơ trở thành ca sĩ.",
-        "correct": false
-      },
-      {
-        "text": "Cô luôn được hỗ trợ từ gia đình trong mọi việc.",
         "correct": false
       }
     ]
@@ -170,33 +170,6 @@
     ]
   },
   {
-    "title": "Chứng hoang tưởng",
-    "content": "Chứng hoang tưởng là tình trạng tâm lý liên quan đến cảm giác nghi ngờ và sợ hãi về người khác mà không có căn cứ thực tế. Triệu chứng có thể bao gồm sự nghi ngờ dữ dội, cảm giác bị đe dọa, và khó khăn trong việc thư giãn. Chứng hoang tưởng thường liên quan đến các rối loạn tâm thần khác và có thể được điều trị bằng liệu pháp tâm lý và thuốc. Nếu không được kiểm soát, tình trạng này có thể dẫn đến những biến chứng nghiêm trọng và hành vi gây nguy hiểm.",
-    "link": "https://vnexpress.net/chung-hoang-tuong-4863575.html",
-    "cat": "suc-khoe",
-    "positivity": 4,
-    "importance": 8,
-    "question": "Chứng hoang tưởng là gì?",
-    "answers": [
-      {
-        "text": "Chứng hoang tưởng là tình trạng nghi ngờ và sợ hãi không có căn cứ về người khác.",
-        "correct": true
-      },
-      {
-        "text": "Chứng hoang tưởng là một loại bệnh truyền nhiễm.",
-        "correct": false
-      },
-      {
-        "text": "Chứng hoang tưởng là một trạng thái tạm thời không cần điều trị.",
-        "correct": false
-      },
-      {
-        "text": "Chứng hoang tưởng là một triệu chứng của bệnh cảm cúm.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Bí quyết trở thành thủ khoa toàn trường của \"bà mẹ U40\"",
     "content": "Nguyễn Song Châu, một bà mẹ U40, đã xuất sắc trở thành thủ khoa toàn trường tại Trường Đại học Gia Định với điểm trung bình 3.7/4.0. Dù phải vừa học, vừa làm và chăm sóc con nhỏ, chị vẫn kiên trì theo đuổi ước mơ học tập bằng cách sắp xếp thời gian hợp lý. Châu đã tham gia nhiều hoạt động ngoại khóa và hiện đang làm việc tại các trung tâm Anh ngữ, với mong muốn trở thành giáo viên tiếng Anh trong tương lai.",
     "link": "https://dantri.com.vn/giao-duc/bi-quyet-tro-thanh-thu-khoa-toan-truong-cua-ba-me-u40-20250322205358478.htm",
@@ -228,6 +201,33 @@
     ]
   },
   {
+    "title": "Chứng hoang tưởng",
+    "content": "Chứng hoang tưởng là tình trạng tâm lý liên quan đến cảm giác nghi ngờ và sợ hãi về người khác mà không có căn cứ thực tế. Triệu chứng có thể bao gồm sự nghi ngờ dữ dội, cảm giác bị đe dọa, và khó khăn trong việc thư giãn. Chứng hoang tưởng thường liên quan đến các rối loạn tâm thần khác và có thể được điều trị bằng liệu pháp tâm lý và thuốc. Nếu không được kiểm soát, tình trạng này có thể dẫn đến những biến chứng nghiêm trọng và hành vi gây nguy hiểm.",
+    "link": "https://vnexpress.net/chung-hoang-tuong-4863575.html",
+    "cat": "suc-khoe",
+    "positivity": 4,
+    "importance": 8,
+    "question": "Chứng hoang tưởng là gì?",
+    "answers": [
+      {
+        "text": "Chứng hoang tưởng là tình trạng nghi ngờ và sợ hãi không có căn cứ về người khác.",
+        "correct": true
+      },
+      {
+        "text": "Chứng hoang tưởng là một loại bệnh truyền nhiễm.",
+        "correct": false
+      },
+      {
+        "text": "Chứng hoang tưởng là một trạng thái tạm thời không cần điều trị.",
+        "correct": false
+      },
+      {
+        "text": "Chứng hoang tưởng là một triệu chứng của bệnh cảm cúm.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Bỏ việc lương cao, sang Việt Nam 'tìm ý nghĩa cuộc đời'",
     "content": "Choi Won Jun, một người Hàn Quốc, đã từ bỏ công việc lương cao ở Seoul để tìm kiếm ý nghĩa cuộc sống tại TP HCM, Việt Nam. Sau khi trải qua cuộc sống áp lực và nhàm chán, anh quyết định học nấu ăn và mở quán thịt nướng. Jun cảm nhận được sự ấm áp, tình người và tinh thần thoải mái của người Việt Nam, điều mà anh không tìm thấy ở Hàn Quốc. Giờ đây, anh làm việc chăm chỉ nhưng cảm thấy hạnh phúc và thỏa mãn hơn nhiều với cuộc sống mới của mình.",
     "link": "https://vnexpress.net/bo-viec-luong-cao-sang-viet-nam-tim-y-nghia-cuoc-doi-4864410.html",
@@ -250,6 +250,33 @@
       },
       {
         "text": "Vì anh muốn đi du lịch vòng quanh thế giới.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "IU: \"Em gái quốc dân\" giàu có xứ Hàn, từng trải qua tuổi thơ khó khăn",
+    "content": "IU, tên thật là Lee Ji Eun, là một trong những ca sĩ và diễn viên nổi tiếng của Hàn Quốc, được biết đến với giọng hát ngọt ngào và nhiều ca khúc thành công. Mặc dù hiện tại sở hữu tài sản gần 50 triệu USD, IU đã trải qua một tuổi thơ khó khăn với nhiều thử thách, bao gồm việc bị bắt nạt và gia đình lâm vào cảnh khốn khó. Cô đã kiên trì theo đuổi ước mơ ca hát và hiện đang gây chú ý với bộ phim \"When life gives you tangerines\". IU không chỉ thành công trong sự nghiệp mà còn tích cực tham gia các hoạt động từ thiện.",
+    "link": "https://dantri.com.vn/giai-tri/iu-em-gai-quoc-dan-giau-co-xu-han-tung-trai-qua-tuoi-tho-kho-khan-20250318195448529.htm",
+    "cat": "giai-tri",
+    "positivity": 9,
+    "importance": 8,
+    "question": "IU đã trải qua những khó khăn gì trong tuổi thơ của mình?",
+    "answers": [
+      {
+        "text": "Cô từng bị bắt nạt và gia đình lâm vào cảnh khó khăn.",
+        "correct": true
+      },
+      {
+        "text": "Cô sống trong một gia đình giàu có mà không gặp khó khăn gì.",
+        "correct": false
+      },
+      {
+        "text": "Cô không có ước mơ trở thành ca sĩ.",
+        "correct": false
+      },
+      {
+        "text": "Cô luôn được hỗ trợ từ gia đình trong mọi việc.",
         "correct": false
       }
     ]
@@ -1009,37 +1036,6 @@
     ]
   },
   {
-    "title": "Bị liệt dây thần kinh số 7 nên ăn gì?",
-    "content": "Bị liệt dây thần kinh số 7, người bệnh cần bổ sung thực phẩm giàu dinh dưỡng để hỗ trợ phục hồi. Các loại thực phẩm như thịt nạc, cá béo, ngũ cốc nguyên hạt và các loại đậu giàu omega-3 rất có lợi cho sức khỏe. Ngoài ra, các loại trái cây và rau xanh cung cấp chất chống oxy hóa, vitamin và khoáng chất thiết yếu, giúp tăng cường hệ miễn dịch và chức năng thần kinh. Uống đủ nước và duy trì chế độ ăn uống lành mạnh cũng rất quan trọng.",
-    "link": "https://vnexpress.net/bi-liet-day-than-kinh-so-7-nen-an-gi-4864560.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 9,
-    "question": "Người bị liệt dây thần kinh số 7 nên ăn gì để phục hồi sức khỏe?",
-    "answers": [
-      {
-        "text": "Thịt nạc, cá béo, ngũ cốc nguyên hạt",
-        "correct": true
-      },
-      {
-        "text": "Chỉ ăn trái cây",
-        "correct": false
-      },
-      {
-        "text": "Ăn nhiều đồ chiên xào",
-        "correct": false
-      },
-      {
-        "text": "Chỉ uống nước trái cây",
-        "correct": false
-      },
-      {
-        "text": "Không cần ăn gì đặc biệt",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Hủy mỡ để giảm 'bụng bia'",
     "content": "Bài viết trình bày trường hợp của anh Bình và anh Cường, hai người đàn ông gặp vấn đề về vòng bụng lớn, thường được gọi là 'bụng bia'. Anh Bình đã chọn phương pháp đông hủy mỡ để giảm mỡ bụng, với kết quả giảm 6 cm vòng bụng trong hai tháng. Trong khi đó, anh Cường đã cải thiện tình trạng sức khỏe của mình bằng cách kết hợp điều trị nội tiết, dinh dưỡng và vận động, giúp giảm 12 kg và vòng bụng xuống còn 88 cm. Bác sĩ khuyến cáo nam giới cần chú ý đến vòng bụng lớn để phòng ngừa các vấn đề sức khỏe liên quan đến mỡ nội tạng.",
     "link": "https://vnexpress.net/huy-mo-de-giam-bung-bia-4864565.html",
@@ -1066,6 +1062,37 @@
       },
       {
         "text": "Chỉ cần tập thể dục mà không cần thay đổi chế độ ăn uống",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Bị liệt dây thần kinh số 7 nên ăn gì?",
+    "content": "Bị liệt dây thần kinh số 7, người bệnh cần bổ sung thực phẩm giàu dinh dưỡng để hỗ trợ phục hồi. Các loại thực phẩm như thịt nạc, cá béo, ngũ cốc nguyên hạt và các loại đậu giàu omega-3 rất có lợi cho sức khỏe. Ngoài ra, các loại trái cây và rau xanh cung cấp chất chống oxy hóa, vitamin và khoáng chất thiết yếu, giúp tăng cường hệ miễn dịch và chức năng thần kinh. Uống đủ nước và duy trì chế độ ăn uống lành mạnh cũng rất quan trọng.",
+    "link": "https://vnexpress.net/bi-liet-day-than-kinh-so-7-nen-an-gi-4864560.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Người bị liệt dây thần kinh số 7 nên ăn gì để phục hồi sức khỏe?",
+    "answers": [
+      {
+        "text": "Thịt nạc, cá béo, ngũ cốc nguyên hạt",
+        "correct": true
+      },
+      {
+        "text": "Chỉ ăn trái cây",
+        "correct": false
+      },
+      {
+        "text": "Ăn nhiều đồ chiên xào",
+        "correct": false
+      },
+      {
+        "text": "Chỉ uống nước trái cây",
+        "correct": false
+      },
+      {
+        "text": "Không cần ăn gì đặc biệt",
         "correct": false
       }
     ]
@@ -1821,6 +1848,33 @@
     ]
   },
   {
+    "title": "Bị suy thận có thể chơi pickleball không?",
+    "content": "Người bị suy thận mạn giai đoạn hai như bạn cần thận trọng khi tham gia các hoạt động thể thao như pickleball. Mặc dù môn này có nhiều lợi ích cho sức khỏe, nhưng cũng đi kèm với nguy cơ chấn thương cao. Trước khi tiếp tục chơi, bạn nên tham khảo ý kiến bác sĩ để đảm bảo an toàn cho sức khỏe của mình.",
+    "link": "https://vnexpress.net/bi-suy-than-co-the-choi-pickleball-khong-4864511.html",
+    "cat": "suc-khoe",
+    "positivity": 6,
+    "importance": 7,
+    "question": "Người bị suy thận có thể tiếp tục chơi pickleball không?",
+    "answers": [
+      {
+        "text": "Nên tham khảo ý kiến bác sĩ trước khi chơi.",
+        "correct": true
+      },
+      {
+        "text": "Có thể chơi mà không cần lo lắng gì.",
+        "correct": false
+      },
+      {
+        "text": "Chơi bình thường như trước đây.",
+        "correct": false
+      },
+      {
+        "text": "Không nên chơi bất kỳ môn thể thao nào.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Cặp đôi đồng tính muốn có con nên làm gì?",
     "content": "Cặp đôi đồng tính có thể có con thông qua các phương pháp hỗ trợ sinh sản hiện đại như thụ tinh nhân tạo (IUI) và thụ tinh trong ống nghiệm (IVF). Những cặp đồng tính nữ có thể xin tinh trùng từ ngân hàng và thực hiện IUI, trong khi cặp đồng tính nam có thể phải chờ đợi các quy định pháp luật cho phép mang thai hộ. Bài viết cũng nhấn mạnh tầm quan trọng của việc tư vấn tâm lý cho bệnh nhân trong quá trình điều trị IVF.",
     "link": "https://vnexpress.net/cap-doi-dong-tinh-muon-co-con-nen-lam-gi-4864488.html",
@@ -1847,33 +1901,6 @@
       },
       {
         "text": "Chờ đợi pháp luật cho phép mang thai hộ",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Bị suy thận có thể chơi pickleball không?",
-    "content": "Người bị suy thận mạn giai đoạn hai như bạn cần thận trọng khi tham gia các hoạt động thể thao như pickleball. Mặc dù môn này có nhiều lợi ích cho sức khỏe, nhưng cũng đi kèm với nguy cơ chấn thương cao. Trước khi tiếp tục chơi, bạn nên tham khảo ý kiến bác sĩ để đảm bảo an toàn cho sức khỏe của mình.",
-    "link": "https://vnexpress.net/bi-suy-than-co-the-choi-pickleball-khong-4864511.html",
-    "cat": "suc-khoe",
-    "positivity": 6,
-    "importance": 7,
-    "question": "Người bị suy thận có thể tiếp tục chơi pickleball không?",
-    "answers": [
-      {
-        "text": "Nên tham khảo ý kiến bác sĩ trước khi chơi.",
-        "correct": true
-      },
-      {
-        "text": "Có thể chơi mà không cần lo lắng gì.",
-        "correct": false
-      },
-      {
-        "text": "Chơi bình thường như trước đây.",
-        "correct": false
-      },
-      {
-        "text": "Không nên chơi bất kỳ môn thể thao nào.",
         "correct": false
       }
     ]
@@ -2787,6 +2814,33 @@
     ]
   },
   {
+    "title": "Cộng đồng mạng phát sốt với bài toán chỉ toàn phép cộng mà gây \"xoắn não\"",
+    "content": "Bài toán đang gây sốt trên mạng xã hội yêu cầu người chơi phải nhận diện quy luật từ một chuỗi số có vẻ như là phép cộng nhưng thực tế lại ẩn chứa nhiều bất ngờ. Đề bài đưa ra bốn phép cộng, trong đó ba kết quả đã cho là sai theo quy tắc toán học truyền thống. Để giải được bài toán, người tham gia cần phát hiện quy luật rằng các kết quả là số đảo ngược của tổng hai số ở phía bên trái dấu '='. Kết quả cuối cùng của phép cộng thứ tư là 13.",
+    "link": "https://dantri.com.vn/giao-duc/cong-dong-mang-phat-sot-voi-bai-toan-chi-toan-phep-cong-ma-gay-xoan-nao-20250320113006716.htm",
+    "cat": "giao-duc",
+    "positivity": 8,
+    "importance": 5,
+    "question": "Bài toán gây sốt trên mạng xã hội yêu cầu người chơi tìm quy luật gì?",
+    "answers": [
+      {
+        "text": "Các số đảo ngược kết quả phép cộng",
+        "correct": true
+      },
+      {
+        "text": "Kết quả là tổng các số bên trái",
+        "correct": false
+      },
+      {
+        "text": "Kết quả là số lớn nhất trong dãy",
+        "correct": false
+      },
+      {
+        "text": "Chỉ cần cộng các số lại với nhau",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Đặt stent sau bao lâu thì ổn định?",
     "content": "Sau khi đặt stent mạch vành, bệnh nhân thường cần nằm viện từ 2-3 ngày để theo dõi sức khỏe. Thời gian hồi phục có thể khoảng một tuần đối với trường hợp không khẩn cấp, nhưng nếu cần đặt stent ngay lập tức do nhồi máu cơ tim, có thể mất vài tuần đến hơn một tháng để bình phục hoàn toàn. Bệnh nhân cần tuân thủ chế độ dinh dưỡng và tránh hoạt động nặng để hồi phục nhanh chóng.",
     "link": "https://vnexpress.net/dat-stent-sau-bao-lau-thi-on-dinh-4864401.html",
@@ -2813,33 +2867,6 @@
       },
       {
         "text": "3 tháng",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Cộng đồng mạng phát sốt với bài toán chỉ toàn phép cộng mà gây \"xoắn não\"",
-    "content": "Bài toán đang gây sốt trên mạng xã hội yêu cầu người chơi phải nhận diện quy luật từ một chuỗi số có vẻ như là phép cộng nhưng thực tế lại ẩn chứa nhiều bất ngờ. Đề bài đưa ra bốn phép cộng, trong đó ba kết quả đã cho là sai theo quy tắc toán học truyền thống. Để giải được bài toán, người tham gia cần phát hiện quy luật rằng các kết quả là số đảo ngược của tổng hai số ở phía bên trái dấu '='. Kết quả cuối cùng của phép cộng thứ tư là 13.",
-    "link": "https://dantri.com.vn/giao-duc/cong-dong-mang-phat-sot-voi-bai-toan-chi-toan-phep-cong-ma-gay-xoan-nao-20250320113006716.htm",
-    "cat": "giao-duc",
-    "positivity": 8,
-    "importance": 5,
-    "question": "Bài toán gây sốt trên mạng xã hội yêu cầu người chơi tìm quy luật gì?",
-    "answers": [
-      {
-        "text": "Các số đảo ngược kết quả phép cộng",
-        "correct": true
-      },
-      {
-        "text": "Kết quả là tổng các số bên trái",
-        "correct": false
-      },
-      {
-        "text": "Kết quả là số lớn nhất trong dãy",
-        "correct": false
-      },
-      {
-        "text": "Chỉ cần cộng các số lại với nhau",
         "correct": false
       }
     ]
@@ -3663,33 +3690,6 @@
       },
       {
         "text": "Trong tháng 6",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Người Ấn Độ đón lễ Holi ở Việt Nam",
-    "content": "Người Ấn Độ tại Việt Nam, đặc biệt là ở TP HCM, đã tổ chức lễ Holi với sự tham gia của đông đảo bạn bè và đồng hương. Trong lễ hội này, họ chuẩn bị bột màu và các món ăn truyền thống để chúc phúc và gắn kết cộng đồng. Holi không chỉ là dịp để vui chơi mà còn mang ý nghĩa sâu sắc về tình yêu, sự tha thứ, và khởi đầu mới. Qua những năm, lễ hội này ngày càng trở nên phổ biến hơn trong cộng đồng người Việt.",
-    "link": "https://vnexpress.net/nguoi-an-do-don-le-holi-o-viet-nam-4863125.html",
-    "cat": "giai-tri",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Người Ấn Độ đã tổ chức lễ Holi như thế nào ở Việt Nam?",
-    "answers": [
-      {
-        "text": "Họ tổ chức lễ hội với bột màu và món ăn truyền thống.",
-        "correct": true
-      },
-      {
-        "text": "Họ chỉ ném nước và không có bột màu.",
-        "correct": false
-      },
-      {
-        "text": "Họ tổ chức lễ hội nhưng không có món ăn nào.",
-        "correct": false
-      },
-      {
-        "text": "Họ chỉ tổ chức lễ hội cho người Ấn Độ mà thôi.",
         "correct": false
       }
     ]
